# nodeshift

./: .gitignore  DESIGN.md  PROJECT-SNAPSHOT.md  README.md  SNAPSHOT-STEP1-i18n.md  SNAPSHOT-STEP2-dialog.md  SNAPSHOT-STEP3-tray.md  SNAPSHOT-STEP4-updater.md  SNAPSHOT-STEP5-codesign.md  SNAPSHOT-STEP6-cache.md  index.html  package-lock.json  package.json  tsconfig.json
.github/.github/workflows/: build.yml  release.yml
.github/workflows/: build.yml  release.yml
nodeshift-shim/: Cargo.toml
nodeshift-shim/src/: main.rs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: cache.rs  config.rs  mod.rs  system.rs  version.rs
src-tauri/src/core/: downloader.rs  env_config.rs  extractor.rs  mirror.rs  mod.rs  project_detect.rs  version_manager.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/components/: Dashboard.tsx  InstallDialog.tsx  ProgressBar.tsx  SettingsPanel.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx  VersionList.tsx
src/hooks/: useConfig.ts  useInstall.ts  useUpdater.ts  useVersions.ts
src/i18n/: en-US.json  index.ts  index.tsx  zh-CN.json
src/lib/: tauri.ts  types.ts
src/styles/: globals.css
