[package]
name = "nodeshift"
version = "0.1.0"
description = "Cross-platform Node.js version manager with GUI"
authors = ["NodeShift Team"]
edition = "2021"

[lib]
name = "nodeshift_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
zip = "2"
dirs = "6"
anyhow = "1"
xz2 = "0.1"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"
winapi = { version = "0.3", features = ["winuser"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"

[features]
custom-protocol = ["tauri/custom-protocol"]
